# SimNetLab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.ps1  bootstrap.sh  vcpkg.json
app/: CMakeLists.txt  app_session.hpp  app_smoke.hpp  client_main.cpp  pipeline_lab_main.cpp  server_main.cpp
src/app/: CMakeLists.txt  client_main.cpp  server_main.cpp
src/app/client/: CMakeLists.txt
src/app/server/: CMakeLists.txt
src/benchmarking/: CMakeLists.txt
src/benchmarking/include/: benchmarking.cppm
src/client/: CMakeLists.txt  input.cpp  input.hpp  main.cpp  network_client.cpp  network_client.hpp  renderer.cpp  renderer.hpp
src/client/ecs/: client_ecs.cpp  client_ecs.hpp  world_client.cpp  world_client.hpp
src/client/src/: input.cpp  main.cpp  network_client.cpp  renderer.cpp  renderer.hpp
src/config/: CMakeLists.txt  README.md
src/config/import/: config.cppm  config_load.cppm  config_types.cppm
src/config/include/: config.cppm
src/config/src/: config_load.cpp
src/core/: CMakeLists.txt  README.md  SimConfig.hpp  boid_math.hpp  boid_steering.cpp  boid_steering.hpp  components.hpp  config.hpp  controller.hpp  core.hpp  prelude.hpp  simulation.cpp  simulation.hpp  singletons.hpp  systems.cpp  systems.hpp  vec3.hpp
src/core/boid/: boid_neighbor_query.cpp  boid_neighbor_query.hpp  boid_steering.cpp  boid_steering.hpp
src/core/config/: ConfigLoader.hpp  SimConfig.hpp  config_loader.hpp  sim_config.hpp
src/core/ecs/: components.hpp  pipeline.cpp  pipeline.hpp  systems.cpp  systems.hpp  world_factory.hpp
src/core/ecs/rules/: boid_rules.hpp
src/core/ecs/systems/: align_heading.cpp  alignment.cpp  apply_steering.cpp  build_caches.cpp  build_neighbor_snapshot.cpp  clear_accumulator.cpp  cohesion.cpp  (+5 more)
src/core/import/: core.cppm  core_bytes.cppm  core_math.cppm  core_time.cppm
src/core/include/: core.cppm
src/core/math/: rules_scalar.hpp  vec3.hpp
src/core/net/: connection_handler.cpp  connection_handler.hpp  net_buffer.hpp  net_connection_handler.cpp  net_connection_handler.hpp  net_manager.cpp  net_manager.hpp  net_message.hpp  net_peer_state.hpp  net_pipeline.cpp  net_pipeline.hpp  net_processor.hpp  net_snapshot.hpp  net_transport.cpp  net_transport.hpp  net_transport_interface.hpp  net_types.hpp  packet_utils.hpp  peer_state.hpp  real_net_transport.cpp  real_net_transport.hpp  snapshot_utils.hpp  wire_types.hpp
src/core/src/: config.hpp  core.cpp  simulation.cpp  simulation.hpp  systems.cpp
src/core/utils/: controller.hpp  id_generator.hpp  path_utils.hpp  time_keeper.hpp
src/game/client/: CMakeLists.txt  client_world.cpp  client_world.hpp  input_system.cpp  input_system.hpp  render_system.cpp  render_system.hpp
src/game/server/: CMakeLists.txt  app_context.hpp  components.hpp  game_server.hpp  server_world.cpp  server_world.hpp
src/game/shared/: CMakeLists.txt  components.hpp  flocking_systems.cpp  flocking_systems.hpp  game_shared.hpp  prelude.hpp  telemetry_systems.cpp  telemetry_systems.hpp
src/game_client/: CMakeLists.txt  README.md
src/game_client/import/: game_client.cppm  game_client_apply.cppm  game_client_types.cppm
src/game_client/include/: game_client.cppm
src/game_client/src/: game_client.cpp
src/game_server/: CMakeLists.txt  README.md
src/game_server/import/: game_server.cppm  game_server_snapshot.cppm
src/game_server/include/: game_server.cppm
src/game_server/src/: game_server.cpp
src/game_shared/: CMakeLists.txt  README.md
src/game_shared/import/: game_shared.cppm  game_shared_components.cppm
src/game_shared/include/: game_shared.cppm
src/game_shared/src/: game_shared_components.cpp
src/pipeline/: CMakeLists.txt  README.md
src/pipeline/import/: pipeline.cppm  pipeline_api.cppm  pipeline_codec.cppm  pipeline_messages.cppm  pipeline_types.cppm
src/pipeline/include/: pipeline.cppm
src/pipeline/private/: pipeline_bitpack.cppm  pipeline_quantize.cppm  pipeline_records.cppm  pipeline_selection.cppm  pipeline_signature.cppm  pipeline_validate.cppm  pipeline_wire.cppm
src/pipeline/src/: pipeline_decode.cpp  pipeline_encode.cpp  raw_full_replace.cpp  raw_snapshot.cpp
src/render/: CMakeLists.txt
src/render/include/: render.cppm
src/simd/: CMakeLists.txt
src/snapshot/: CMakeLists.txt  README.md
src/snapshot/import/: snapshot.cppm  snapshot_types.cppm  snapshot_validate.cppm
src/snapshot/include/: snapshot.cppm
src/spatial/: CMakeLists.txt  README.md
src/spatial/import/: spatial.cppm  spatial_build.cppm  spatial_query.cppm  spatial_types.cppm
src/spatial/include/: spatial.cppm
src/spatial/src/: spatial_build.cpp
src/synthetic/: CMakeLists.txt  README.md
src/synthetic/import/: synthetic.cppm  synthetic_snapshot.cppm  synthetic_types.cppm
src/synthetic/src/: synthetic_snapshot.cpp
src/telemetry/: CMakeLists.txt  README.md  colors.hpp  logger.cpp  logger.hpp  metrics_collector.cpp  metrics_collector.hpp  telemetry.cpp  telemetry.hpp  timer.cpp  timer.hpp  validation.cpp  validation.hpp
src/telemetry/import/: telemetry.cppm  telemetry_log.cppm  telemetry_metrics.cppm  telemetry_types.cppm
src/telemetry/include/: telemetry.cppm
src/telemetry/src/: export_csv.cpp  export_json.cpp  telemetry.cpp  telemetry_log.cpp  telemetry_metrics.cpp  tracy.cpp
src/transport/: CMakeLists.txt  README.md
src/transport/import/: transport.cppm  transport_client.cppm  transport_server.cppm  transport_types.cppm
src/transport/include/: transport.cppm
src/transport/src/: transport_enet.cpp  transport_smoke.cpp
src/utils/: CMakeLists.txt
src/utils/src/: config.cpp  config_loader.cpp  timestep.cpp  utils.cpp
src/visualization/: CMakeLists.txt
src/visualization/src/: raylib_boid_transform.cppm  raylib_debug_gizmos.cppm  raylib_instancing.cppm  raylib_simulation_viewer.cpp  raylib_viewer_sidebar.cppm
tests/: CMakeLists.txt  test_integration.cpp  test_rules.cpp
tests/net/: mock_transport.hpp  test_connection_handler.cpp  test_helpers.hpp  test_net_buffer.cpp  test_net_manager.cpp  test_net_message.cpp  test_peer_state.cpp  test_pipeline.cpp  test_snapshot.cpp
(+75 files in other folders)
